# Kinfolk

./: README.md  launch.sh  pyproject.toml  requirements.txt
kinfolk/: __init__.py  character.py  data.py  gui.py  gui_template.py
